--- a/addOn/frontend/public/index.html
+++ b/addOn/frontend/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/react-leaflet-markercluster@3.0.0-rc1/dist/styles.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/react-mde@11.5.0/lib/styles/css/react-mde-all.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.7.2/main.min.css" />
-    <title>Portail D'alimentation Durable</title>
+    <title>Portail de données pour l'alimentation durable</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
